--- a/app/views/professionals/_calendar.html.erb
+++ b/app/views/professionals/_calendar.html.erb
@@ -1,4 +1,12 @@
 <%= turbo_frame_tag :calendar do %>
-
+  <div class="m-4">
+    <%= week_calendar(events: @appointments, professional: @professional) do |date, events| %>
+      <p data-appointment-target="date">
+        <%= date %>
+      </p>
+      <% events.each do |event| %>
+        <p><%= event.user.first_name%> <%= event.user.last_name%></p>
+      <% end %>
+    <% end %>
   </div>
 <% end %>
