--- a/app/views/professionals/pro_index.html.erb
+++ b/app/views/professionals/pro_index.html.erb
@@ -1,7 +1,7 @@
 <div class="d-flex flex-row justify-content-between" style="height: 100%;">
-  <%# sidebar all my services %>
+  <%# sidebar all my service %>
   <div>
-    <%= render "all_services" %>
+    <%= render "all_service" %>
   </div>
 
   <div class="text-center m-4" style="width: 100%;">
