--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,16 +10,16 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "Accueil", root_path, class: "nav-link" %>
+            <%= link_to "Accueil", root_path, class: "nav-link text-white" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "Contact", "#", class: "nav-link" %>
+            <%= link_to "Contact", "#", class: "nav-link text-white" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "A propos", "#", class: "nav-link" %>
+            <%= link_to "A propos", "#", class: "nav-link text-white" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "Proposer un service", new_professional_path, class: "nav-link" %>
+            <%= link_to "Proposer un service", new_professional_path, class: "nav-link text-white" %>
           </li>
           <li class="nav-item dropdown d-flex align-items-end flex-column">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -33,7 +33,7 @@
           </li>
         <% else %>
           <li class="nav-item btn btn-primary rounded rounded-4">
-            <%= link_to "Se connecter", new_user_session_path, class: "nav-link" %>
+            <%= link_to "Se connecter", new_user_session_path, class: "nav-link text-white" %>
           </li>
         <% end %>
       </ul>
