--- a/app/views/shared/_all_slot.html.erb
+++ b/app/views/shared/_all_slot.html.erb
@@ -8,17 +8,15 @@
     <% end_time = Time.parse("#{selected_date} #{end_hour}:00") %>
     <div data-appointment-target="times">
       <% while current_time <= end_time do %>
-        <%appointment = Appointment.find_by(start_time: current_time.strftime("%Y-%m-%d %H:%M"), professional: professional)%>
-        <% if (appointment.nil?) %>
-          <%= link_to current_time.strftime("%H:%M"), professionals_path,
-              class:"btn btn-outline-primary m-2 ",
-              data: {time: current_time.strftime("%H:%M"),
-                    action:"click->appointment#select"}%>
+        <%@appointment = Appointment.find_by(start_time: current_time.strftime("%Y-%m-%d %H:%M"), professional: professional)%>
+        <% if (@appointment.nil?) %>
+          <%= link_to current_time.strftime("%H:%M"), pro_show_user_path(current_user, professional,date: @selected_date, appointment: nil),
+              class:"btn btn-outline-primary m-2",
+              data: {time: current_time.strftime("%H:%M")}%>
         <% else %>
-          <%= link_to current_time.strftime("%H:%M"), pro_show_professional_path(professional.id, appointment.id),
+          <%= link_to current_time.strftime("%H:%M"), pro_show_user_path(current_user, professional,date: @selected_date, appointment: @appointment),
               class:"btn btn-outline-primary m-2 btn-info text-dark",
               data: {time: current_time.strftime("%H:%M"),
-                    action:"click->appointment#select",
                     turbo: false}%>
         <% end %>
         <% current_time += interval.minutes %>
