take latest change master

--- a/app/assets/stylesheets/components/_search-bar.scss
+++ b/app/assets/stylesheets/components/_search-bar.scss
@@ -2,4 +2,34 @@
   border-radius: 32px;
   height:70px;
   margin-top: -32px;
+  font-size: 20px;
+
+  @media (max-width: 768px) {
+    height:60px;
+    padding: 0 15px !important;
+    font-size: 14px;
+  }
+
+  @media (max-width: 480px) {
+    height:50px;
+    padding: 0 10px !important;
+    font-size: 12px;
+  }
+}
+
+.w-form{
+  width: 80%;
+
+  @media (max-width: 768px) {
+    width: 95% !important;
+  }
+
+  @media (max-width: 480px) {
+    width: 90% !important;
+  }
+}
+
+.inner-shadow{
+  // border: 0.5px solid black;
+  box-shadow: inset 1px 1px 10px rgba(0, 0, 0, 0.4);
 }
