--- a/app/views/professionals/home.html.erb
+++ b/app/views/professionals/home.html.erb
@@ -1,21 +1,24 @@
 <div class="container-all">
   <div class="banner">
-    <div class="container">
+    <div class="container text-end">
       <h1>Adopter avec amour,</h1>
       <h1>accompagner avec soin.</h1>
+      <%= link_to professionals_path, class: "btn btn-primary btn-spa text-white p-3 mt-4 text-end shadow", style:"border-radius: 32px;" do%>
+      <span class="icon-custom">🐾</span> Je veux adopter !
+      <%end%>
     </div>
   </div>
 
   <%= simple_form_for :search, url: professionals_path, method: :get do |f| %>
     <div class="d-flex justify-content-center search-form-control form-group mb-3", style="width: 100%;" >
-      <div class="d-flex align-items-center search-form-control form-group", style="width: 70%;">
+      <div class="d-flex align-items-center search-form-control form-group w-form">
         <%= text_field_tag :query,
               params[:query],
-              class: "form-control search-bar",
-              placeholder: "Rechercher un professionnel"
+              class: "form-control search-bar bg-secondary ps-5 inner-shadow",
+              placeholder: "Rechercher un professionnel..."
           %>
         <div>
-          <%= submit_tag "Rechercher", class: "btn btn-primary text-white search-bar p-4" %>
+          <%= submit_tag "Rechercher", class: "btn btn-primary text-white search-bar p-3" %>
         </div>
       </div>
     </div>
