--- a/app/views/professionals/home.html.erb
+++ b/app/views/professionals/home.html.erb
@@ -14,7 +14,7 @@
       <div class="d-flex align-items-center search-form-control form-group w-form">
         <%= text_field_tag :query,
               params[:query],
-              class: "form-control search-bar bg-secondary ps-5 inner-shadow",
+              class: "form-control search-bar bg-secondary ps-5",
               placeholder: "Rechercher un professionnel..."
           %>
         <div>
