--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -58,6 +58,6 @@
     </div>
   </div>
   <div id="available-pro", style="position: sticky; top: 100px;">
-    <%= render "available_slots", professional: @professional %>
+    <%= render "shared/available_slots", professional: @professional %>
   </div>
 </div>
