get latest change

--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -8,7 +8,7 @@
         <i class="fa-solid fa-paw float-end text-primary"></i>
         <div class="container text-center shadow-lg p-3 mb-5 rounded">
           <div class="text-center m-4">
-            <h1>Votre rendez-vous est confirmé!</h1>
+            <h1>Détails de votre rendez-vous</h1>
           </div>
           <button class="d-none">Déplacer rendez-vous</button>
           <button class="d-none">Annuler rendez-vous</button>
