--- a/app/views/professionals/home.html.erb
+++ b/app/views/professionals/home.html.erb
@@ -26,51 +26,34 @@
 
   <h3 class="mt-5">Nos professionnels</h3>
   <div class="d-flex justify-content-start custom-scroll mt-2", style="white-space: nowrap; overflow-x: auto;">
+
     <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1734016805/vitaly-gariev-HURf5iUtSQg-unsplash_haxcr5.jpg);">
       <div class="d-inline text-center">
         <%= link_to "Tous nos professionnels", professionals_path, style: "text-decoration:none; color:white;" %>
       </div>
     </div>
-    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824916/judy-beth-morris-5Bi6MWlWMbw-unsplash_funbpk.jpg)">
-      <%= link_to "Vétérinaires", professionals_path(specialty: "Vétérinaire"), style: "text-decoration:none; color:white;" %>
-    </div>
-    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824916/reba-spike-PEQIIwnIGdo-unsplash_yfvjlt.jpg)">
-      <%= link_to "Toiletteurs", professionals_path(specialty: "Toiletteur"), style: "text-decoration:none; color:white;" %>
-    </div>
-    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824916/matt-nelson-aI3EBLvcyu4-unsplash_drfsex.jpg)">
-      <%= link_to "Promeneurs", professionals_path(specialty: "Promeneur"), style: "text-decoration:none; color:white;" %>
-    </div>
-    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
-      <div class="d-inline text-center">
-        <%= link_to "Comportementalistes", professionals_path(specialty: "Comportementaliste"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
-        <p>Bientôt disponible</p>
-      </div>
-    </div>
-    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
-      <div class="d-inline text-center">
-        <%= link_to "Educateurs", professionals_path(specialty: "Educateur"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
-        <p>Bientôt disponible</p>
-      </div>
-    </div>
-    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
-      <div class="d-inline text-center">
-        <%= link_to "Pensions", professionals_path(specialty: "Pension"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
-        <p>Bientôt disponible</p>
-      </div>
-    </div>
-    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
-      <div class="d-inline text-center">
-        <%= link_to "Nutritionnistes", professionals_path(specialty: "Nutritionniste"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
-        <p>Bientôt disponible</p>
-      </div>
-    </div>
-    <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1733824584/andrew-s-ouo1hbizWwo-unsplash_ym5hee.jpg)">
-      <div class="d-inline text-center">
-        <%= link_to "Petsitters", professionals_path(specialty: "Petsitter"), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
-        <p>Bientôt disponible</p>
-      </div>
-    </div>
+
+    <% (0...@all_specialty.length).each do |i| %>
+      <% specialty = @all_specialty[i][:specialty]%>
+      <% photo = @all_specialty[i][:photo]%>
+      <% if @available_specialty.include?(specialty)%>
+        <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%=photo%>);">
+          <div class="d-inline text-center" >
+            <%= link_to specialty, professionals_path(specialty: specialty), style: "text-decoration:none; color:white;" %>
+          </div>
+        </div>
+      <% else %>
+        <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%=photo%>);">
+          <div class="d-inline text-center" >
+            <%= link_to specialty, professionals_path(specialty: specialty), style: "text-decoration:none; color:white; cursor: default;", onclick: "return false;" %>
+            <p>Bientôt disponible</p>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
   </div>
+
+  <%# appointments to come %>
   <h3 class="mt-5 mb-4">Vos futurs rendez-vous</h3>
   <% if user_signed_in? %>
     <% if @appointments.exists? %>
