--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,15 +1,26 @@
+<div>
+  <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Retour', :back, class:"text-decoration-none" %>
+</div>
+
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-4">
       <div class="form-devise">
         <i class="fa-solid fa-paw float-end text-primary"></i>
-        <h2>Mettre à jour <%= resource_name.to_s.humanize %></h2>
+        <h2>Mettre à jour mon profil </h2>
 
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= f.error_notification %>
 
           <div class="form-inputs">
-            <%= f.input :email, required: true, autofocus: true %>
+            <%= f.input :first_name, label: "Prénom" %>
+            <%= f.input :last_name, label: "Nom" %>
+            <%= f.input :photo, as: :file, label: "Photo" %>
+            <%= f.input :email,
+                        required: true,
+                        autofocus: true,
+                        readonly: true,
+                        hint: "Vous ne pouvez pas changer votre email" %>
 
             <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
               <p>Actuellement en attente pour: <%= resource.unconfirmed_email %></p>
@@ -26,7 +37,7 @@
                         input_html: { autocomplete: "new-password" } %>
             <%= f.input :current_password,
                         label: "Mot de passe actuel",
-                        hint: "Nous avons besoin de ton mot de passe pour confirmer",
+                        hint: "Saisissez votre mot de passe actuel pour valider les changements",
                         required: true,
                         input_html: { autocomplete: "current-password" } %>
           </div>
@@ -36,11 +47,8 @@
           </div>
         <% end %>
 
-        <h3>Supprimer mon compte</h3>
-
-        <div>Déçu? <%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Etes vous sûr?", turbo_confirm: "Etes vous sûr?" }, method: :delete %></div>
-
-        <%= link_to "Précédent", :back %>
+        <p class="mt-4">Supprimer mon compte</p>
+        <div><%= button_to "Supprimer mon compte", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Etes vous sûr?", turbo_confirm: "Etes vous sûr?" }, method: :delete %></div>
       </div>
     </div>
   </div>
