--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -26,22 +26,13 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <h5 class="text-uppercase">Suivez-nous</h5>
-        <ul class="list-unstyled mb-0">
-          <li>
-            <a href="https://www.instagram.com/boop_officiel/" target="_blank" class="text-dark">
-              <i class="fa-brands fa-instagram"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.tiktok.com/@boop_officiel?_t=8s9jTobM5eo&_r=1" target="_blank" class="text-dark">
-              <i class="fa-brands fa-tiktok"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
+          <ul class="social-links">
+           <li><a href="https://www.tiktok.com/@boop_officiel?_t=8s9jTobM5eo&_r=1" target="_blank"><i class="fab fa-tiktok"></i></a></li>
+           <li><a href="https://www.instagram.com/boop_officiel/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+           <li><a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a></li> </ul>
+       </div>
     </div>
   </div>
 
