--- a/app/views/professionals/home.html.erb
+++ b/app/views/professionals/home.html.erb
@@ -3,7 +3,7 @@
     <div class="container text-end">
       <h1>Adopter avec amour,</h1>
       <h1>accompagner avec soin.</h1>
-      <%= link_to professionals_path, class: "btn btn-primary btn-spa text-white p-3 mt-4 text-end shadow", style:"border-radius: 32px;" do%>
+      <%= link_to pets_path, class: "btn btn-primary btn-spa text-white p-3 mt-4 text-end shadow", style:"border-radius: 32px;" do%>
       <span class="icon-custom">🐾</span> Je veux adopter !
       <%end%>
     </div>
