--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= javascript_importmap_tags %>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <%= favicon_link_tag 'https://res.cloudinary.com/dsbteudoz/image/upload/v1733824548/boop_logo_asibkj.png' %>
   </head>
 
   <body>
