take latest change

--- a/app/views/professionals/home.html.erb
+++ b/app/views/professionals/home.html.erb
@@ -91,7 +91,7 @@
     <% else %>
       <div class="d-flex justify-content-center align-items-center">
         <div class="d-flex flex-column justify-content-center align-items-center", style="width: 50%;">
-          <p>Vous n'avez pas de rendez-vous à venir.</p>
+          <p class="text-center">Vous n'avez pas de rendez-vous à venir.</p>
           <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733845850/owner-playing-with-pet-dog_vfnehl.png">
         </div>
       </div>
