--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -116,3 +116,16 @@ h1, h2, h3, h4, h5, h6, p {
     margin-top: 10px !important;
   }
 }
+
+// card-appointment
+.card-appointment {
+  width: 50%;
+
+  @media (max-width: 768px) {
+    width: 70%;
+  }
+
+  @media (max-width: 480px) {
+    width: 95%;
+  }
+}
