--- a/app/views/professionals/home.html.erb
+++ b/app/views/professionals/home.html.erb
@@ -60,8 +60,8 @@
       <% @appointments.each do |appointment| %>
         <a href="<%=professional_appointment_path(appointment.professional, appointment)%>" style="color: black; text-decoration: none;">
           <div class="d-flex justify-content-center">
-            <div class="card mt-1 mb-4 shadow" style="width: 50%;">
-              <div class="card-header bg-primary rounded">
+            <div class="card mt-1 mb-4 shadow card-appointment" >
+              <div class="card-header bg-primary rounded-bottom shadow-sm">
                 <div class="d-flex justify-content-around fw-bold">
                   <div class="d-flex align-items-center">
                     <i class="fa-regular fa-calendar-days"></i>
@@ -73,14 +73,14 @@
                   </div>
                 </div>
               </div>
-              <div class="card-body d-flex align-items-center ms-5">
+              <div class="card-body d-flex justify-content-center align-items-center">
                 <%= image_tag url_for(appointment.professional.photo), alt:"Photo du professionnel", class:"small-rounded-circle"%>
                 <div class="d-flex flex-column ms-4">
                   <p>
                     Rendez-vous avec : <%= appointment.professional.name%>
                   </p>
                   <p>
-                    Lieux : <%= appointment.professional.address%>
+                    Lieu : <%= appointment.professional.address%>
                   </p>
                 </div>
               </div>
