--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,19 +1,22 @@
-
 <div>
   <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Back', :back, class:"m-3 text-decoration-none" %>
 </div>
 <div class="container">
-  <h1 class="text-center my-4"><%= @pet.name %></h1>
-  <div class="row justify-content-center">
-    <div class="col-md-8">
-      <div class="card">
-        <%= image_tag @pet.photo.url, class: "card-img-top" if @pet.photo.present? %>
-        <div class="card-body">
-          <h5 class="card-title">Âge: <%= @pet.age %></h5>
-          <p class="card-text">Sexe: <%= @pet.sex %></p>
-          <p class="card-text">Espèce: <%= @pet.species %></p>
-          <p class="card-text"><%= @pet.description %></p>
-        </div>
+  <div class="row">
+    <div class="col card_pro">
+      <%= image_tag @pet.photo, class: "card-img-top" if @pet.photo.present? %>
+    </div>
+    <div class="col card_pro d-flex flex-column justify-content-between">
+      <div>
+        <h3 class="text-center"><%= @pet.name %></h3>
+        <p class="my-2">Âge: <%= @pet.age %></p>
+        <p>Sexe: <%= @pet.sex %></p>
+        <p class="my-2">Race: <%= @pet.species %></p>
+        <p>Description: <%= @pet.description %></p>
+        <p class="my-2">Refuge: <%=@pet.shelter%></p>
+      </div>
+      <div>
+        <p style="font-size: 36px"> <i class="fa-solid fa-paw float-end text-primary"></i></p>
       </div>
     </div>
   </div>
