--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Retour', :back, class:"text-decoration-none" %>
 </div>
 <div class="row">
-  <div class="col card_pro p-4 m-4 text-center">
+  <div class="col card_pro p-4 m-4 text-center" style="width: 45%;">
     <h2> <strong> Mon Profil </strong> </h2>
     <%= cl_image_tag @user.photo.key, width: 100, style: "border-radius: 50%; margin: 20px; aspect-ratio: 1;" %>
     <p>Nom : <strong> <%=@user.first_name%> </strong></p>
@@ -12,25 +12,25 @@
       <%= link_to "Modifier mon profil", edit_user_registration_path(current_user), class: "btn btn-primary my-4" %>
     </div>
   </div>
-  <div class="col card_pro p-4 m-4 text-center">
+  <div class="col card_pro p-4 m-4 text-center" style="width: 45%;">
     <h2> <strong> Mes rendez-vous </strong> </h2>
     <% if @appointments.empty? %>
       <p class="mt-3">Vous n'avez pas de rendez-vous</p>
       <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733845850/owner-playing-with-pet-dog_vfnehl.png">
     <% else %>
       <% @appointments.each do |a| %>
-        <div class="card_pro p-4 m-4 ">
-          <div class="d-flex flex-row justify-content-between">
-            <div class="d-flex flex-row">
-              <p>Date : <%= a.date.strftime("%d/%m/%Y")%></p>
+      <a href="<%=professional_appointment_path(a.professional, a)%>" style="text-decoration: none; color: black">
+          <div class="card_pro p-4 m-1 text-start" style="background-color: #f7e6d4;">
+            <div class="text-end">
+              <div >
+                <p><%= a.date.strftime("%d/%m/%Y")%></p>
+                <p><%= a.start_time.strftime("%H:%M")%></p>
+              </div>
             </div>
-            <div class="d-flex flex-row">
-              <p>Heure : <%= a.start_time.strftime("%H:%M")%></p>
-            </div>
+            <p>Professionnel : <strong><%= a.professional.name %></strong></p>
+            <p style="word-wrap: break-word; word-break: break-word;">Motif de la visite : <%= truncate(a.reason, length: 100, omission: '...') %></p>
           </div>
-          <p>Professionnel : <%= a.professional.name %></p>
-          <p>Motif de la visite : <%= a.reason %></p>
-        </div>
+      </a>
       <% end %>
     <% end%>
   </div>
