--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -1,2 +1,32 @@
-<h1>Conditions Générales</h1>
-<p>Ici, vous pouvez ajouter le texte de vos conditions générales.</p>
+
+<div class="container">
+  <h1 class="text-center my-4">Conditions générales</h1>
+  <div class="row">
+    <div class="col-md-12">
+      <h2>Introduction</h2>
+      <p>
+        Bienvenue sur notre site. En utilisant notre site, vous acceptez les présentes conditions générales. Veuillez les lire attentivement.
+      </p>
+      <h2>Utilisation du site</h2>
+      <p>
+        Vous acceptez d'utiliser notre site uniquement à des fins légales et de manière à ne pas enfreindre les droits de, restreindre ou empêcher l'utilisation et la jouissance de ce site par un tiers.
+      </p>
+      <h2>Propriété intellectuelle</h2>
+      <p>
+        Tout le contenu présent sur ce site, y compris les textes, graphiques, logos, icônes, images, clips audio, téléchargements numériques et compilations de données, est la propriété de notre entreprise ou de ses fournisseurs de contenu et est protégé par les lois internationales sur le droit d'auteur.
+      </p>
+      <h2>Limitation de responsabilité</h2>
+      <p>
+        Nous ne serons pas responsables des dommages directs, indirects, accessoires, consécutifs ou punitifs découlant de votre utilisation de ce site.
+      </p>
+      <h2>Modifications des conditions générales</h2>
+      <p>
+        Nous nous réservons le droit de modifier ces conditions générales à tout moment. Les modifications prendront effet dès leur publication sur le site.
+      </p>
+      <h2>Contact</h2>
+      <p>
+        Si vous avez des questions concernant ces conditions générales, veuillez nous contacter à l'adresse suivante : METTRE LE MAIL DE CONTACT ICI.
+      </p>
+    </div>
+  </div>
+</div>
