--- a/app/assets/stylesheets/components/_grid.scss
+++ b/app/assets/stylesheets/components/_grid.scss
@@ -1,11 +1,39 @@
 .grid {
   display: grid;
-  grid-template-columns: 1.5fr 1fr;;
+  grid-template-columns: 1.5fr 1fr;
   }
 
-  @media all and (orientation: portrait){
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr;;
-      }
+  // grid-index pro
+.grid-index {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
   }
+
+
+.grid-map {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+
+    @media (max-width: 700px) {
+      grid-template-columns: 1fr;
+      gap: 1rem;
+      .map{
+        height: 100vh;
+      }
+    }
+  }
+
+
+@media all and (orientation: portrait){
+  .grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      }
+
+  .grid-index {
+      display: grid;
+      grid-template-columns: 1fr;
+      }
+}
