--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,37 +1,68 @@
 <div>
   <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Retour', :back, class:"text-decoration-none" %>
 </div>
-<div class="row">
-  <div class="col card_pro p-4 m-4 text-center" style="width: 45%;">
-    <h2> <strong> Mon Profil </strong> </h2>
-    <%= cl_image_tag @user.photo.key, width: 100, style: "border-radius: 50%; margin: 20px; aspect-ratio: 1;" %>
-    <p>Nom : <strong> <%=@user.first_name%> </strong></p>
-    <p>Prénom : <strong> <%=@user.last_name%> </strong></p>
-    <p>Email : <strong> <%=@user.email%> </strong></p>
-    <div>
-      <%= link_to "Modifier mon profil", edit_user_registration_path(current_user), class: "btn btn-primary my-4" %>
-    </div>
-  </div>
-  <div class="col card_pro p-4 m-4 text-center" style="width: 45%;">
-    <h2> <strong> Mes rendez-vous </strong> </h2>
-    <% if @appointments.empty? %>
-      <p class="mt-3">Vous n'avez pas de rendez-vous</p>
-      <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733845850/owner-playing-with-pet-dog_vfnehl.png">
-    <% else %>
-      <% @appointments.each do |a| %>
-      <a href="<%=professional_appointment_path(a.professional, a)%>" style="text-decoration: none; color: black">
-          <div class="card_pro p-4 m-1 text-start" style="background-color: #f7e6d4;">
-            <div class="text-end">
-              <div >
-                <p><%= a.date.strftime("%d/%m/%Y")%></p>
-                <p><%= a.start_time.strftime("%H:%M")%></p>
-              </div>
-            </div>
-            <p>Professionnel : <strong><%= a.professional.name %></strong></p>
-            <p style="word-wrap: break-word; word-break: break-word;">Motif de la visite : <%= truncate(a.reason, length: 100, omission: '...') %></p>
+<div>
+  <div>
+    <div class="p-4 text-center">
+      <div class="row">
+        <%# my profil %>
+        <div class="col card_pro p-4 m-2 text-center" style="width: 47%;">
+          <h2> <strong> Mon Profil </strong> </h2>
+          <%= cl_image_tag @user.photo.key, width: 100, style: "border-radius: 50%; margin: 20px; aspect-ratio: 1;" %>
+          <p>Nom : <strong> <%=@user.first_name%> </strong></p>
+          <p>Prénom : <strong> <%=@user.last_name%> </strong></p>
+          <p>Email : <strong> <%=@user.email%> </strong></p>
+          <div>
+            <%= link_to "Modifier mon profil", edit_user_registration_path(current_user), class: "btn btn-primary my-4" %>
           </div>
-      </a>
-      <% end %>
-    <% end%>
+        </div>
+        <%# my pets %>
+        <div class="col card_pro p-4 m-2 text-center" style="width: 47%;">
+          <div class="d-flex flex-row justify-content-center">
+            <h2> <strong> Mes animaux </strong> </h2>
+            <a href="<%=new_pet_path(current_user)%>" class="btn btn-primary rounded-circle shadow mx-3" >
+              <i class="fa-solid fa-plus"></i>
+            </a>
+          </div>
+
+
+          <% if @pets.empty? %>
+            <p class="mt-3">Vous n'avez pas d'animaux</p>
+
+            <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734435780/dog-thinking-about-bone-removebg-preview_nlayll.png" alt="pas d'animaux" style="width: 200px; ">
+          <% else %>
+            <% @pets.each do |pet| %>
+              <a href="<%=pet_path(current_user, pet)%>" class="text-decoration-none">
+                <%= cl_image_tag pet.photo.key, width: 100, style: "border-radius: 50%; margin: 20px; aspect-ratio: 1;", class:"shadow"%>
+              </a>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+    <%# my appointments %>
+    <div class="card_pro p-4 m-3 text-center">
+      <h2> <strong> Mes rendez-vous </strong> </h2>
+      <% if @appointments.empty? %>
+        <p class="mt-3">Vous n'avez pas de rendez-vous</p>
+        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733845850/owner-playing-with-pet-dog_vfnehl.png">
+      <% else %>
+        <% @appointments.each do |a| %>
+          <a href="<%=professional_appointment_path(a.professional, a)%>" style="text-decoration: none; color: black">
+            <div class="card_pro p-4 m-1 text-start" style="background-color: #f7e6d4;">
+              <div class="text-end">
+                <div >
+                  <p><%= a.date.strftime("%d/%m/%Y")%></p>
+                  r
+                  <p><%= a.start_time.strftime("%H:%M")%></p>
+                </div>
+              </div>
+              <p>Professionnel : <strong><%= a.professional.name %></strong></p>
+              <p style="word-wrap: break-word; word-break: break-word;">Motif de la visite : <%= truncate(a.reason, length: 100, omission: '...') %></p>
+            </div>
+          </a>
+        <% end %>
+      <% end%>
+    </div>
   </div>
 </div>
