--- a/app/assets/stylesheets/components/_card_professional.scss
+++ b/app/assets/stylesheets/components/_card_professional.scss
@@ -5,6 +5,7 @@
   margin: 8px;
   padding: 8px;
   box-shadow: 4px 4px 2px rgb(219, 216, 216);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .grid-professional-show {
@@ -23,4 +24,9 @@
   @media (max-width: 480px) {
     width: 100%;
   }
+}
+
+.card_pro.hovered {
+  transform: scale(1.05); /* Agrandissement à 105% */
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2); /* Optionnel : ajoute une ombre */
 }
