--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -2,13 +2,13 @@
   <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Back', :back, class:"m-3 text-decoration-none" %>
 </div>
 <div class="container">
-  <div class="row">
-    <div class="col card_pro">
-      <%= image_tag @pet.photo, class: "card-img-top" if @pet.photo.present? %>
+  <div class="row d-flex justify-content-center">
+    <div class="col-lg-5 col-sm-10 card_pro" style="height: 400px">
+      <%= image_tag @pet.photo, class: "card-img-top w-100 h-100 object-fit-cover" if @pet.photo.present? %>
     </div>
-    <div class="col card_pro d-flex flex-column justify-content-between">
+    <div class="col-lg-5 col-sm-10 card_pro d-flex flex-column justify-content-between">
       <div>
-        <h3 class="text-center"><%= @pet.name %></h3>
+        <h3 class="text-center m-3"><%= @pet.name %></h3>
         <p class="my-2">Âge: <%= @pet.age %></p>
         <p>Sexe: <%= @pet.sex %></p>
         <p class="my-2">Race: <%= @pet.species %></p>
